--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ connexion[swagger-ui]>=2, <3
 python_dateutil == 2.6.0
 setuptools >= 21.0.0
 swagger-ui-bundle >= 0.0.2
+
+Flask~=2.2.5
+six~=1.16.0
+pymongo~=4.6.2
