edit action progress

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,12 @@ jobs:
     - name: Build docker
       run: |
         docker build . -t $REPO_NAME/$IMAGE_NAME
-    - name: run docker
+    - name: Start services with docker-compose
       run: |
-        docker run -d -e 8080:8080 -host=172.17.0.2 $REPO_NAME/$IMAGE_NAME:latest && \
-          docker ps && sleep 5
+        docker-compose up -d
+    - name: Wait for services to be ready
+      run: |
+        sleep 10
     - name: Run API Tests
       id: run-newman
       uses: anthonyvscode/newman-action@v1
