--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     depends_on:
       - mongo
     environment:
-      MONGO_URI: mongodb://mongo:27017/school
+      MONGO_URI: mongodb://mongo:27017/
     ports:
       - "8080:8080"
 
